// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MainEditorAssetHeader->load wdb test load wdb extract assets from loaded wdb asset extract material assets fix bug if wdb gameObjects share the same material, should only extrace the shared material once 1`] = `
<article
  className="wonder-asset-assetChildren"
>
  <article
    className="wonder-asset-fileBox "
    onClick={[Function]}
  >
    <div
      className="box-image"
    >
      <img
        onDragStart={[Function]}
        src="data:image/png;base64 for img-canvas"
      />
    </div>
    <div
      className="item-text "
    >
      <span>
        lightMaterial_0
      </span>
    </div>
  </article>
</article>
`;

exports[`MainEditorAssetHeader->load wdb test load wdb extract assets from loaded wdb asset extract material assets if wdb->material not exist in assets, extract them and add to assets material asset should has unique name 1`] = `
<article
  className="wonder-asset-assetChildren"
>
  <article
    className="wonder-asset-folderBox"
    id="folder-7"
    style={
      Object {
        "border": "0px",
      }
    }
  >
    <div
      className="item-ground"
      draggable={true}
      onDragEnd={[Function]}
      onDragEnter={[Function]}
      onDragLeave={[Function]}
      onDragOver={[Function]}
      onDragStart={[Function]}
      onDrop={[Function]}
    />
    <div
      className="box-image"
    >
      <img
        src="./public/img/assetPackage.png"
      />
    </div>
    <div
      className="item-text "
    >
      <span>
        Materials
      </span>
    </div>
  </article>
  <article
    className="wonder-asset-folderBox"
    id="folder-9"
    style={
      Object {
        "border": "0px",
      }
    }
  >
    <div
      className="item-ground"
      draggable={true}
      onDragEnd={[Function]}
      onDragEnter={[Function]}
      onDragLeave={[Function]}
      onDragOver={[Function]}
      onDragStart={[Function]}
      onDrop={[Function]}
    />
    <div
      className="box-image"
    >
      <img
        src="./public/img/assetPackage.png"
      />
    </div>
    <div
      className="item-text "
    >
      <span>
        Textures
      </span>
    </div>
  </article>
  <article
    className="wonder-asset-fileBox "
    onClick={[Function]}
  >
    <div
      className="box-image"
    >
      <img
        onDragStart={[Function]}
        src="data:image/png;base64 for img-canvas"
      />
    </div>
    <div
      className="item-text "
    >
      <span>
        Wdb
      </span>
    </div>
  </article>
  <article
    className="wonder-asset-fileBox "
    onClick={[Function]}
  >
    <div
      className="box-image"
    >
      <img
        onDragStart={[Function]}
        src="./public/img/mat.jpg"
      />
    </div>
    <div
      className="item-text "
    >
      <span>
        Texture
      </span>
    </div>
  </article>
</article>
`;

exports[`MainEditorAssetHeader->load wdb test load wdb extract assets from loaded wdb asset extract material assets if wdb->material not exist in assets, extract them and add to assets should add "Materials" folder node and add material node into it test load the same wdb twice 1`] = `
<article
  className="wonder-asset-assetChildren"
>
  <article
    className="wonder-asset-fileBox "
    onClick={[Function]}
  >
    <div
      className="box-image"
    >
      <img
        onDragStart={[Function]}
        src="data:image/png;base64 for img-canvas"
      />
    </div>
    <div
      className="item-text "
    >
      <span>
        Texture
      </span>
    </div>
  </article>
</article>
`;

exports[`MainEditorAssetHeader->load wdb test load wdb extract assets from loaded wdb asset extract material assets if wdb->material not exist in assets, extract them and add to assets should add "Materials" folder node and add material node into it test load wdb once 1`] = `
<article
  className="wonder-asset-assetChildren"
>
  <article
    className="wonder-asset-fileBox "
    onClick={[Function]}
  >
    <div
      className="box-image"
    >
      <img
        onDragStart={[Function]}
        src="data:image/png;base64 for img-canvas"
      />
    </div>
    <div
      className="item-text "
    >
      <span>
        Texture
      </span>
    </div>
  </article>
</article>
`;

exports[`MainEditorAssetHeader->load wdb test load wdb extract assets from loaded wdb asset extract script attribute assets if wdb->script attribute not exist in assets, extract them and add to assets should add "ScriptAttributes" folder node and add scriptAttribute node into it test load the same wdb twice 1`] = `
<article
  className="wonder-asset-assetChildren"
>
  <article
    className="wonder-asset-fileBox "
    onClick={[Function]}
  >
    <div
      className="box-image"
    >
      <img
        onDragStart={[Function]}
        src="./public/img/scriptAttribute.png"
      />
    </div>
    <div
      className="item-text "
    >
      <span>
        aaa
      </span>
    </div>
  </article>
</article>
`;

exports[`MainEditorAssetHeader->load wdb test load wdb extract assets from loaded wdb asset extract script attribute assets if wdb->script attribute not exist in assets, extract them and add to assets should add "ScriptAttributes" folder node and add scriptAttribute node into it test load wdb once 1`] = `
<article
  className="wonder-asset-assetChildren"
>
  <article
    className="wonder-asset-fileBox "
    onClick={[Function]}
  >
    <div
      className="box-image"
    >
      <img
        onDragStart={[Function]}
        src="./public/img/scriptAttribute.png"
      />
    </div>
    <div
      className="item-text "
    >
      <span>
        aaa
      </span>
    </div>
  </article>
</article>
`;

exports[`MainEditorAssetHeader->load wdb test load wdb extract assets from loaded wdb asset extract script event function assets if wdb->script event function data not exist in assets, extract them and add to assets should add "ScriptEventFunctions" folder node and add scriptEventFunction node into it test load the same wdb once 1`] = `
<article
  className="wonder-asset-assetChildren"
>
  <article
    className="wonder-asset-fileBox "
    onClick={[Function]}
  >
    <div
      className="box-image"
    >
      <img
        onDragStart={[Function]}
        src="./public/img/scriptEventFunction.png"
      />
    </div>
    <div
      className="item-text "
    >
      <span>
        aaa
      </span>
    </div>
  </article>
</article>
`;

exports[`MainEditorAssetHeader->load wdb test load wdb extract assets from loaded wdb asset extract script event function assets if wdb->script event function data not exist in assets, extract them and add to assets should add "ScriptEventFunctions" folder node and add scriptEventFunction node into it test load the same wdb twice 1`] = `
<article
  className="wonder-asset-assetChildren"
>
  <article
    className="wonder-asset-fileBox "
    onClick={[Function]}
  >
    <div
      className="box-image"
    >
      <img
        onDragStart={[Function]}
        src="./public/img/scriptEventFunction.png"
      />
    </div>
    <div
      className="item-text "
    >
      <span>
        aaa
      </span>
    </div>
  </article>
</article>
`;

exports[`MainEditorAssetHeader->load wdb test load wdb extract assets from loaded wdb asset extract texture assets if wdb->texture not exist in assets, extract them and add to assets should add "Textures" folder node and add texture node into it test load the same wdb once 1`] = `
<article
  className="wonder-asset-assetChildren"
>
  <article
    className="wonder-asset-fileBox "
    onClick={[Function]}
  >
    <div
      className="box-image"
    >
      <img
        onDragStart={[Function]}
        src="object_url1"
      />
    </div>
    <div
      className="item-text "
    >
      <span>
        texture_0
      </span>
    </div>
  </article>
</article>
`;

exports[`MainEditorAssetHeader->load wdb test load wdb extract assets from loaded wdb asset extract texture assets if wdb->texture not exist in assets, extract them and add to assets should add "Textures" folder node and add texture node into it test load the same wdb twice 1`] = `
<article
  className="wonder-asset-assetChildren"
>
  <article
    className="wonder-asset-fileBox "
    onClick={[Function]}
  >
    <div
      className="box-image"
    >
      <img
        onDragStart={[Function]}
        src="object_url2"
      />
    </div>
    <div
      className="item-text "
    >
      <span>
        texture_0
      </span>
    </div>
  </article>
</article>
`;

exports[`MainEditorAssetHeader->load wdb test load wdb extract assets from loaded wdb asset extract texture assets if wdb->texture not exist in assets, extract them and add to assets texture asset should has unique name 1`] = `
<article
  className="wonder-asset-assetChildren"
>
  <article
    className="wonder-asset-fileBox "
    onClick={[Function]}
  >
    <div
      className="box-image"
    >
      <img
        onDragStart={[Function]}
        src="texture1img"
      />
    </div>
    <div
      className="item-text "
    >
      <span>
        texture_0
      </span>
    </div>
  </article>
  <article
    className="wonder-asset-fileBox "
    onClick={[Function]}
  >
    <div
      className="box-image"
    >
      <img
        onDragStart={[Function]}
        src="object_url1"
      />
    </div>
    <div
      className="item-text "
    >
      <span>
        texture_0 1
      </span>
    </div>
  </article>
</article>
`;

exports[`MainEditorAssetHeader->load wdb test load wdb extract assets from loaded wdb asset if wdb has no material should has no extracted material assets and texture assets 1`] = `
<article
  className="wonder-asset-assetChildren"
>
  <article
    className="wonder-asset-fileBox "
    onClick={[Function]}
  >
    <div
      className="box-image"
    >
      <img
        onDragStart={[Function]}
        src="data:image/png;base64 for img-canvas"
      />
    </div>
    <div
      className="item-text "
    >
      <span>
        Wdb
      </span>
    </div>
  </article>
</article>
`;

exports[`MainEditorAssetHeader->load wdb test load wdb extract assets from loaded wdb asset test wdb is exported scene wdb test extract script attribute assets if wdb->script attribute not exist in assets, extract them and add to assets should add "ScriptAttributes" folder node and add scriptAttribute node into it test load wdb once 1`] = `
<article
  className="wonder-asset-assetChildren"
>
  <article
    className="wonder-asset-fileBox "
    onClick={[Function]}
  >
    <div
      className="box-image"
    >
      <img
        onDragStart={[Function]}
        src="./public/img/scriptAttribute.png"
      />
    </div>
    <div
      className="item-text "
    >
      <span>
        aaa
      </span>
    </div>
  </article>
</article>
`;

exports[`MainEditorAssetHeader->load wdb test load wdb fix bug fix geometry bug 
        1.create gameObject g1 in scene;
        2.load truck wdb asset w1;

        g1->geometry->select geometry group widget shouldn't has "NoName Geometry"
         1`] = `
<article
  className="wonder-inspector-geometry"
>
  <div
    className="inspector-item"
  >
    <div
      className="item-header"
      title="geometry in use which is default or model's geometry"
    >
      Geometry
    </div>
    <div
      className="item-content"
    >
      <div
        className="inspector-select"
      >
        <div
          className="select-name"
          onClick={[Function]}
        >
          Wonder-Default-Cube
        </div>
        <div
          className="select-img"
          onClick={[Function]}
        >
          <img
            src="./public/img/select.png"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="select-component-content"
  >
    <div
      className="select-component-item"
    >
      <div
        className="select-item-header"
      >
        Geometry
      </div>
      <div
        className="select-item-body"
      >
        <div
          className="select-item-content"
          onClick={[Function]}
        >
          Cesium_Milk_Truck_0
        </div>
        <div
          className="select-item-content"
          onClick={[Function]}
        >
          Cesium_Milk_Truck_1
        </div>
        <div
          className="select-item-content"
          onClick={[Function]}
        >
          Cesium_Milk_Truck_2
        </div>
        <div
          className="select-item-content"
          onClick={[Function]}
        >
          Wheels
        </div>
        <div
          className="select-item-content select-item-active"
          onClick={[Function]}
        >
          Wonder-Default-Cube
        </div>
        <div
          className="select-item-content"
          onClick={[Function]}
        >
          Wonder-Default-Sphere
        </div>
      </div>
    </div>
    <div
      className="select-component-bg"
      onClick={[Function]}
    />
  </div>
</article>
`;

exports[`MainEditorAssetHeader->load wdb test load wdb relate wdb asset gameObjects with default geometrys 
        1.create gameObject g1 with default cube geometry in scene;
        2.load wdb asset w1(has one cube gameObject with default cube geometry);

        g1->geometry->select geometry group widget should only have not-duplicate-default-geometrys and be using default cube geometry
         1`] = `
<article
  className="wonder-inspector-geometry"
>
  <div
    className="inspector-item"
  >
    <div
      className="item-header"
      title="geometry in use which is default or model's geometry"
    >
      Geometry
    </div>
    <div
      className="item-content"
    >
      <div
        className="inspector-select"
      >
        <div
          className="select-name"
          onClick={[Function]}
        >
          Wonder-Default-Cube
        </div>
        <div
          className="select-img"
          onClick={[Function]}
        >
          <img
            src="./public/img/select.png"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="select-component-content"
  >
    <div
      className="select-component-item"
    >
      <div
        className="select-item-header"
      >
        Geometry
      </div>
      <div
        className="select-item-body"
      >
        <div
          className="select-item-content select-item-active"
          onClick={[Function]}
        >
          Wonder-Default-Cube
        </div>
        <div
          className="select-item-content"
          onClick={[Function]}
        >
          Wonder-Default-Sphere
        </div>
      </div>
    </div>
    <div
      className="select-component-bg"
      onClick={[Function]}
    />
  </div>
</article>
`;
